[package]
name = "game-starter"
version = "0.1.0"
publish = false
authors = ["geecraft23<geekbook2092@gmail.com>"]
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
default = [
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy/x11",
    "bevy_kira_audio/ogg"
]

dev = [
    "bevy/dynamic",
]

[dependencies]
bevy = { version = "0.7", default-features = false }
bevy_kira_audio = { version = "0.10" }
bevy_asset_loader = { version = "0.11" }
rand = "0.8.3"
bevy_rapier2d = { version = "0.14", features=["debug-render"]}
bevy-inspector-egui = "0.11"
bevy_ecs_ldtk = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.25", features=["x11"]}

[build-dependencies]
embed-resource = "1.4"
